Se agregaron funcionalidades al menú de navegabilidad

--- a/index.html
+++ b/index.html
@@ -9,23 +9,30 @@
     </head>
 
     <body>
+        <!-- Mensaje principal centrado -->
         <br>
         <div class="centrado">
             <h1 class="ui center aligned header">Bienvenido Adolfo García Vazquez</h1>
             <img class="ui huge centered image" src="img/fondo_principal.png">
         </div>
 
+        <!-- Menú colocado en la parte izquierda -->
         <div class="ui large left fixed blue inverted vertical menu">
             <div class="item">
+                <!-- Logo de Syscol -->
                 <img class="ui image" src="img/logo.jpg">
             </div>
-            <a class="item">Instalación</a>
-            <a class="item">Monitoreo</a>
-            <a class="item">Cobranza</a>
-            <a class="item">Mantenimiento</a>
+            <a href="instalacion_solicitudes.html" class="item">Instalación</a>
+            <a href="monitoreo.html" class="item">Monitoreo</a>
+            <a href="cobranza.html" class="item">Cobranza</a>
+            <a href="mantenimiento.html" class="item">Mantenimiento</a>
             <br><br><br>
-            <a class="item">Reportes</a>
-            <a class="item">Pendientes</a>
+            <a href="reportes.html" class="item">Reportes</a>
+            <a href="pendientes.html" class="item">Pendientes</a>
         </div>
+        <script src="https://code.jquery.com/jquery-3.1.1.min.js" 
+            integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+            crossorigin="anonymous"></script>
+        <script src="semantic/dist/semantic.min.js"></script>
     </body>
 </html>
