--- a/instalacion_solicitudes.html
+++ b/instalacion_solicitudes.html
@@ -9,17 +9,97 @@
     </head>
 
     <body>
+        <!-- Menú colocado en la parte izquierda -->
         <div class="ui large left fixed blue inverted vertical menu">
-            <div class="item">
-                <img class="ui image" src="img/logo.jpg">
+                <div class="item">
+                    <!-- Logo de Syscol -->
+                    <img href="index.html" class="ui image" src="img/logo.jpg">
+                </div>
+                <a href="instalacion_solicitudes.html" class="item">Instalación</a>
+                <a href="monitoreo.html" class="item">Monitoreo</a>
+                <a href="cobranza.html" class="item">Cobranza</a>
+                <a href="mantenimiento.html" class="item">Mantenimiento</a>
+                <br><br><br>
+                <a href="reportes.html" class="item">Reportes</a>
+                <a href="pendientes.html" class="item">Pendientes</a>
             </div>
-            <a class="item">Instalación</a>
-            <a class="item">Monitoreo</a>
-            <a class="item">Cobranza</a>
-            <a class="item">Mantenimiento</a>
-            <br><br><br>
-            <a class="item">Reportes</a>
-            <a class="item">Pendientes</a>
         </div>
-    </body>
-</html>
+        
+        <!-- Menú de navegación con botones -->
+        <div class="centrado">
+            <br><br><br>
+            <div class="wrap">
+                <ul class="tabs">
+                    <li><a href="#tab1"><span class="tab-text">Solicitudes</span></a></li>
+                    <li><a href="#tab2"></span><span class="tab-text">Clientes</span></a></li>
+                    <li><a href="#tab3"></span><span class="tab-text">Inmuebles</span></a></li>
+                </ul>
+            
+                <div class="secciones">
+                    <article id="tab1">
+                        <div class="ui segment">
+                            <h3 class="ui left aligned header">
+                                Solicitudes de primera vez
+                                <button class="ui right floated primary button "">
+                                    Agregar
+                                </button>
+                            </h3>
+                            <p></p>
+                        </div>
+                            <div class="ui segment">
+                                    <h3 class="ui left aligned header">
+                                        Solicitudes normales
+                                        <button class="ui right floated primary button "">
+                                                Agregar
+                                        </button>
+                                    </h3>
+                                    <p></p>
+                            </div>
+                            <div class="ui segment">
+                                    <h3 class="ui left aligned header">
+                                        Solicitudes de primera vez pendientes
+                                        <button class="ui right floated primary button "">
+                                                Agregar
+                                        </button>
+                                    </h3>
+                                    <p></p>
+                            </div>
+                            <div class="ui segment">
+                                    <h3 class="ui left aligned header">
+                                        Solicitudes normales pendientes
+                                        <button class="ui right floated primary button "">
+                                                Agregar
+                                        </button>
+                                    </h3>
+                                    <p></p>
+                            </div>
+                            <div class="ui segment">
+                                    <h3 class="ui left aligned header">
+                                        Solicitudes atendidas
+                                        <button class="ui right floated primary button "">
+                                                Agregar
+                                        </button>
+                                    </h3>
+                                    <p></p>
+                            </div>
+                        </article>
+                        <article id="tab2">
+                            <h1>Clientes</h1>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel voluptates unde, consequuntur aliquid architecto rem numquam expedita minima dolorem pariatur recusandae, eius quod quia aspernatur id impedit, tenetur! Aspernatur incidunt molestiae dolores animi ea praesentium ipsam tenetur voluptas cupiditate perspiciatis eum nihil, natus exercitationem libero earum fuga dignissimos impedit numquam, quasi, placeat officiis voluptates, ad reprehenderit fugiat? Fugiat aperiam et magni, molestiae, numquam consectetur vitae sapiente cupiditate totam laboriosam voluptate obcaecati, aliquam placeat? Suscipit dolores fuga laudantium sed, qui magni iusto dolore quia. Quis fugit exercitationem porro. Rerum nihil omnis recusandae ratione fuga alias eligendi, earum sunt veritatis praesentium eum perspiciatis. Molestias deserunt, iure neque animi quod! Impedit reprehenderit cumque, numquam velit quae cum eius quidem similique laudantium hic deleniti!</p>
+                        </article>
+                        <article id="tab3">
+                            <h1>Inmuebles</h1>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea numquam odio voluptate. Aliquam incidunt similique, et quasi ducimus quos aut autem non dignissimos dicta sit provident, voluptatibus ut blanditiis perspiciatis cum, vel temporibus minima enim. Asperiores omnis placeat officiis a tenetur sit recusandae, reprehenderit neque. Tempora quibusdam, perferendis id ratione culpa dolorum! Nemo, animi?</p><br>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum dignissimos at esse, ipsum rerum assumenda nisi obcaecati! Aliquam iure voluptatem incidunt, explicabo sit labore, perferendis eius ad vel quia. Praesentium, doloribus. Quisquam provident nostrum totam itaque debitis, minima, tempore dolores!</p>
+                        </article>
+                    </div>
+                </div>
+            </div>
+            <script src="https://code.jquery.com/jquery-3.1.1.min.js" 
+                integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+                crossorigin="anonymous"></script>
+            <script src="semantic/dist/semantic.min.js"></script>
+            <!-- Es el código de JavaScript utilizado en esta página -->
+            <script src="instalacion_solicitudes.js"></script>
+        </body>
+    </html>
