--- a/instalacion_solicitudes.html
+++ b/instalacion_solicitudes.html
@@ -37,11 +37,12 @@
                 
                 <!-- Botones de navegación -->
                 <div class="secciones">
+                    <!-- Secciones de cada uno de los botones -->
                     <article id="tab1">
                         <div class="ui segment">
                             <h3 class="ui left aligned header">
                                 Solicitudes de primera vez
-                                <button class="ui right floated primary button "">
+                                <button href="#frame_solicitudes_primeravez" class="ui right floated primary button ">
                                     Agregar
                                 </button>
                             </h3>
@@ -96,6 +97,37 @@
                 </div>
             </div>
         </div>
+
+        <!-- Formulario para las solicitudes de primera vez -->
+        <div class="formulario">
+            <div class="secciones">
+                <article id="frame_solicitudes_primeravez">
+                    <div class="ui form"> 
+                        <h4 class="ui dividing header">Agregar solicitud de primera vez</h4>                  
+                        <div class="five wide field">
+                            <label>Nombre completo</label>
+                            <input type="text" placeholder="Nombre completo">
+                        </div>
+                        <div class="five wide field">
+                            <label>Domicilio</label>
+                            <input type="text" placeholder="Domicilio">
+                        </div>
+                        <div class="three wide field">
+                            <label>Fecha de visita</label>
+                            <input type="text" placeholder="dd/mm/yyyy">
+                        </div>     
+                        <div class="two wide field">
+                            <label>Hora de visita</label>
+                            <input type="text" placeholder="24:00">
+                        </div> 
+                        <div class="ui blue submit button">Aceptar</div>   
+                        <div class="ui red submit button">Cancelar</div>      
+                    </div>
+                </article>
+            </div>
+        </div>
+
+        <!-- Scripts de JavaScript--> -->
         <script src="https://code.jquery.com/jquery-3.1.1.min.js" 
             integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
             crossorigin="anonymous"></script>
