Intentando arreglar el tamaño de una sección

--- a/instalacion_solicitudes.html
+++ b/instalacion_solicitudes.html
@@ -104,11 +104,11 @@
                 <article id="frame_solicitudes_primeravez">
                     <div class="ui form"> 
                         <h4 class="ui dividing header">Agregar solicitud de primera vez</h4>                  
-                        <div class="five wide field">
+                        <div class="field">
                             <label>Nombre completo</label>
                             <input type="text" placeholder="Nombre completo">
                         </div>
-                        <div class="five wide field">
+                        <div class="field">
                             <label>Domicilio</label>
                             <input type="text" placeholder="Domicilio">
                         </div>
