Se le agregó funcionalidad al boton de cancelar, pero aún no sirve como deseo

--- a/instalacion_solicitudes.html
+++ b/instalacion_solicitudes.html
@@ -52,7 +52,7 @@
                             <h3 class="ui left aligned header">
                                 Solicitudes normales
                                 <button class="ui right floated primary button "">
-                                        Agregar
+                                    Agregar
                                 </button>
                             </h3>
                             <p></p>
@@ -61,7 +61,7 @@
                             <h3 class="ui left aligned header">
                                 Solicitudes de primera vez pendientes
                                 <button class="ui right floated primary button "">
-                                        Agregar
+                                    Agregar
                                 </button>
                             </h3>
                             <p></p>
@@ -70,7 +70,7 @@
                             <h3 class="ui left aligned header">
                                 Solicitudes normales pendientes
                                 <button class="ui right floated primary button "">
-                                        Agregar
+                                    Agregar
                                 </button>
                             </h3>
                             <p></p>
@@ -79,7 +79,7 @@
                             <h3 class="ui left aligned header">
                                 Solicitudes atendidas
                                 <button class="ui right floated primary button "">
-                                        Agregar
+                                    Agregar
                                 </button>
                             </h3>
                             <p></p>
@@ -114,8 +114,9 @@
                                 <label>Hora de visita</label>
                                 <input type="text" placeholder="24:00">
                             </div> 
-                            <div class="ui red submit button">Cancelar</div>   
-                            <div class="ui blue submit button">Aceptar</div>      
+                            <br>
+                            <button class="ui red submit button ">Cancelar</button>
+                            <button class="ui blue submit button ">Aceptar</button>     
                         </div>
                     </article>
                 </div>
