Se agregó la página de solicitudes de primera vez pendientes, con sus respectivas funcionalidades

--- a/instalacion_solicitudes.html
+++ b/instalacion_solicitudes.html
@@ -35,13 +35,14 @@
                     <li><a href="#tab3"></span><span class="tab-text">Inmuebles</span></a></li>
                 </ul>
                 
-                <!-- Botones de navegación -->
+                <!-- Contenido de la sección solicitudes -->
                 <div class="secciones">
-                    <!-- Secciones de cada uno de los botones -->
                     <article id="tab1">
                         <div class="ui segment">
+                            <!-- Segmentos de la sección de solicitudes -->
                             <h3 class="ui left aligned header">
                                 Solicitudes de primera vez
+                                <!-- Botón de cada segmento -->
                                 <button href="#frame_solicitudes_primeravez" class="ui right floated primary button ">
                                     Agregar
                                 </button>
