Cambios correspondientes a nombres y referencias

--- a/instalacion_solicitudes.html
+++ b/instalacion_solicitudes.html
@@ -53,7 +53,7 @@
                         <div class="ui segment">
                             <h3 class="ui left aligned header">
                                 Reporte de solicitudes pendientes
-                                <button href="#" class="ui right floated primary button" onclick="location.href='solicitudes_primera_vez_pendientes.html';">
+                                <button href="#" class="ui right floated primary button" onclick="location.href='solicitudes_pendientes.html';">
                                     Mostrar
                                 </button>
                             </h3>
