--- a/instalacion_solicitudes.html
+++ b/instalacion_solicitudes.html
@@ -49,11 +49,11 @@
                             </h3>
                             <p></p>
                         </div>
-
+                        <!-- Segmentos de la sección de solicitudes pendientes-->
                         <div class="ui segment">
                             <h3 class="ui left aligned header">
                                 Reporte de solicitudes pendientes
-                                <button href="#" class="ui right floated primary button" onclick="location.href='solicitudes_pendientes.html';">
+                                <button href="#solicitudes_pendientes" class="ui right floated primary button">
                                     Mostrar
                                 </button>
                             </h3>
@@ -78,7 +78,7 @@
                     </article>
                     <article id="inmuebles">
                         <h1>Inmuebles</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea numquam odio voluptate. Aliquam incidunt similique, et quasi ducimus quos aut autem non dignissimos dicta sit provident, voluptatibus ut blanditiis perspiciatis cum, vel temporibus minima enim. Asperiores omnis placeat officiis a tenetur sit recusandae, reprehenderit neque. Tempora quibusdam, perferendis id ratione culpa dolorum! Nemo, animi?</p><br>
+                        <p>Lorem ipsum dolor sit, consectetur adipisicing elit. Ea numquam odio voluptate. Aliquam incidunt similique, et quasi ducimus quos aut autem non dignissimos dicta sit provident, voluptatibus ut blanditiis perspiciatis cum, vel temporibus minima enim. Asperiores omnis placeat officiis a tenetur sit recusandae, reprehenderit neque. Tempora quibusdam, perferendis id ratione culpa dolorum! Nemo, animi?</p><br>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum dignissimos at esse, ipsum rerum assumenda nisi obcaecati! Aliquam iure voluptatem incidunt, explicabo sit labore, perferendis eius ad vel quia. Praesentium, doloribus. Quisquam provident nostrum totam itaque debitis, minima, tempore dolores!</p>
                     </article>
 
@@ -87,11 +87,68 @@
                         <div class="four wide field">
                             <label>Tipo de solicitud</label>
                             <select id="solicitud">
-                                <option selected="true" disabled="disabled">Elija una opción</option>
-                                <option value="0">Primera vez</option>
-                                <option value="1">Normal</option>
+                                <option value="0" selected="true" disabled="disabled">Elija una opción</option>
+                                <option value="1">Primera vez</option>
+                                <option value="2">Normal</option>
                             </select>
                         </div>                      
+                    </article>
+                <!--Reporte de solicitudes pendientes-->
+                    <article id="solicitudes_pendientes"> 
+                        <div class="four wide field">
+                            <div class="four wide field">
+                                <label>Tipo de solicitud</label>
+                                <select id="solicitud_pendiente">
+                                    <option value="0" selected="true" disabled="disabled">Elija una opción</option>
+                                    <option value="1">Todas</option>
+                                    <option value="2">Primera vez</option>
+                                    <option value="3">Normal</option>
+                                </select>
+                            </div> 
+                        <div class="ui celled grid">
+                            <div class="row">
+                                <div class="twelve wide column">
+                                    <table class="ui celled table">
+                                        <thead>
+                                            <tr>
+                                                <th>Nombre completo</th>
+                                                <th>Fecha</th>
+                                                <th>Hora</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td>Nombre ejemplo</td>
+                                                <td>Fecha ejemplo</td>
+                                                <td>Hora ejemplo</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                                <div class="two wide column">
+                                    <div class="ui vertical labeled icon buttons">
+                                        <button class="ui button" id="proceder">
+                                            <i class="large angle double right icon"></i>
+                                            Proceder
+                                        </button>
+                                        <button class="ui button" id="boton_detalle">
+                                            <i class="large address card icon"></i>
+                                            Detalle
+                                        </button>
+                                        <button class="ui button" id="boton_editar">
+                                            <i class="large edit icon"></i>
+                                            Editar
+                                        </button>
+                                        <button class="ui button" id="boton_borrar">
+                                            <i class="large trash icon"></i>
+                                            Borrar
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                            <button class="ui blue submit button ">Regresar</button>
+                    
+                        </div>   
                     </article>
 
                     <!-- Formulario para las solicitudes de primera vez -->
@@ -106,14 +163,30 @@
                                 <label>Domicilio</label>
                                 <input type="text" placeholder="Domicilio">
                             </div>
-                            <div class="three wide field">
-                                <label>Fecha de visita</label>
-                                <input type="text" placeholder="dd/mm/yyyy">
-                            </div>     
-                            <div class="two wide field">
-                                <label>Hora de visita</label>
-                                <input type="text" placeholder="24:00">
-                            </div> 
+                            <div class="ui vertically divided grid">
+                                <div class="two column row">
+                                    <div class="column">
+                                        <label>Fecha de visita</label>
+                                        <div class="ui calendar" id="example2">
+                                            <div class="ui input left icon">
+                                            <i class="calendar icon"></i>
+                                            <input type="text" placeholder="Fecha">
+                                            </div>
+                                        </div>
+                                        <br/>
+                                    </div>     
+                                    <div class="column">
+                                        <label>Hora de visita</label>
+                                        <div class="ui calendar" id="example3">
+                                            <div class="ui input left icon">
+                                            <i class="time icon"></i>
+                                            <input type="text" placeholder="Hora">
+                                            </div>
+                                        </div>
+                                        <br/>
+                                    </div> 
+                                </div>
+                            </div>
                             <br>
                             <button class="ui red submit button ">Cancelar</button>
                             <button class="ui blue submit button ">Aceptar</button>     
@@ -138,31 +211,86 @@
                                     <option value="1">2</option>
                                 </select>
                             </div>
-                            <div class="three wide field">
-                                <label>Fecha de visita</label>
-                                <div class="ui calendar" id="example2">
-                                    <div class="ui input left icon">
-                                    <i class="calendar icon"></i>
-                                    <input type="text" placeholder="Fecha">
-                                    </div>
+                            <div class="ui vertically divided grid">
+                                <div class="two column row">
+                                        <div class="column">
+                                            <label>Fecha de visita</label>
+                                            <div class="ui calendar" id="example2">
+                                                <div class="ui input left icon">
+                                                <i class="calendar icon"></i>
+                                                <input type="text" placeholder="Fecha">
+                                                </div>
+                                            </div>
+                                            <br/>
+                                        </div>     
+                                        <div class="column">
+                                            <label>Hora de visita</label>
+                                            <div class="ui calendar" id="example3">
+                                                <div class="ui input left icon">
+                                                <i class="time icon"></i>
+                                                <input type="text" placeholder="Hora">
+                                            </div>
+                                        </div>
+                                        <br/>
+                                    </div> 
                                 </div>
-                                <br/>
-                            </div>     
-                            <div class="two wide field">
-                                <label>Hora de visita</label>
-                                <div class="ui calendar" id="example3">
-                                    <div class="ui input left icon">
-                                    <i class="time icon"></i>
-                                    <input type="text" placeholder="Hora">
-                                    </div>
-                                </div>
-                                <br/>
-                            </div> 
+                            </div>
                             <br>
                             <button class="ui red submit button ">Cancelar</button>
                             <button class="ui blue submit button ">Aceptar</button>     
                         </div>
                     </article>
+                </div>
+            </div>
+            <!--Detalles de la solicitud de primera vez-->
+            <div class="formulario">
+                <div class="ui modal" id="detalle">
+                    <i class="close icon"></i>
+                    <div class="header">
+                        Detalles de solicitud de primera vez
+                    </div>
+                    <div class="content">
+                        <table class="ui definition table">
+                        <tbody>
+                            <tr>
+                                <td class="two wide column">Nombre Completo</td>
+                                <td>Nombre Completo</td>
+                            </tr>
+                            <tr>
+                                <td class="two wide column">Domicilio</td>
+                                <td>Domicilio</td>
+                            </tr>
+                            <tr>
+                                <td class="two wide column">Fecha de visita</td>
+                                <td>Fecha de visita</td>
+                            </tr>
+                            <tr>
+                                <td class="two wide column">Hora de visita</td>
+                                <td>Hora de visita</td>
+                            </tr>
+                        </tbody>
+                        </table>
+                    </div>
+                    <div class="actions">
+                        <div class="ui button">
+                            Regresar
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--Confirmacion para borrar solicitud de primera vez-->
+            <div class="formulario">
+                <div class="ui modal" id="borrar">
+                    <div class="header">
+                        Advertencia
+                    </div>
+                    <div class="content">
+                        ¿Esta seguro de eliminar la solicitud seleccionada?
+                    </div>
+                    <div class="actions">
+                        <div class="ui blue submit button">Si</div> 
+                        <div class="ui red submit button">No</div> 
+                    </div>
                 </div>
             </div>
         </div>
