--- a/solicitudes_pendientes.html
+++ b/solicitudes_pendientes.html
@@ -148,5 +148,12 @@
             </div>
             </div>
         </div>
+                <!-- Scripts de JavaScript--> -->
+                <script src="https://code.jquery.com/jquery-3.1.1.min.js" 
+                integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+                crossorigin="anonymous"></script>
+            <script src="semantic/dist/semantic.min.js"></script>
+            <!-- Es el código de JavaScript utilizado en esta página -->
+            <script src="instalacion_solicitudes.js"></script>
     </body>
 </html>
